tests/rosetta/out/C/anonymous-recursion.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:17Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int fib(int n) {
  if (n < 2) {
    return n;
  }
  return fib(n - 1) + fib(n - 2);
}

int main() {
  int i = (-1);
  while (i <= 10) {
    if (i < 0) {
      char *tmp1 = _str(i);
      char *tmp2 = concat_string("fib(", tmp1);
      char *tmp3 =
          concat_string(tmp2, ") returned error: negative n is forbidden");
      printf("%s\n", tmp3);
    } else {
      char *tmp4 = _str(i);
      char *tmp5 = concat_string("fib(", tmp4);
      char *tmp6 = concat_string(tmp5, ") = ");
      char *tmp7 = _str(fib(i));
      char *tmp8 = concat_string(tmp6, tmp7);
      printf("%s\n", tmp8);
    }
    i = i + 1;
  }
}

int main() {
  main();
  return 0;
}
